--- a/website.css
+++ b/website.css
@@ -24,7 +24,7 @@
     text-align: center;
     padding-top: 8%;
       font-family:'sacramento'cursive;
-    font-style-: italic;
+    font-style: italic;
 }
 #h2{
     color: #66BFBF;
