--- a/website.css
+++ b/website.css
@@ -23,8 +23,8 @@
     color:#66BFBF;
     text-align: center;
     padding-top: 8%;
-      font-family:'sacramento'cursive;
-    font-style: italic;
+      font-family:'montserrat',sans-serif;
+    
 }
 #h2{
     color: #66BFBF;
