--- a/website.css
+++ b/website.css
@@ -23,7 +23,7 @@
     color:#66BFBF;
     text-align: center;
     padding-top: 8%;
-      font-family:'montserrat',sans-serif;
+      font-family:'merriweather',serif;
     
 }
 #h2{
